# dgen

./: Cargo.toml  Dockerfile  Makefile  README.md  dgen.toml  pops.txt
data/: airports.jsonl
src/: main.rs
src/dgen/: mod.rs
