[package]
name = "dgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
toml = "0.5.8"
clap = { version = "3.1.5", features = ["derive"] }
regex = "1.5.5"
lazy_static = "1.4.0"